Product photon automatically created by 'mint product create'. ACL_OVERRIDE_HASH: e40c2d70e202d96d8e5097903165368e